--- a/Task-3/src/style.scss
+++ b/Task-3/src/style.scss
@@ -129,13 +129,17 @@ body{
 		z-index: 3;
 	}
 
-	&__burger {
+	&__menu{
+		position: relative;
+		display: inline-block;
+	}
+
+	&__button{
 		display: none;
 	}
 
 	&__list {
 		display: flex;
-		row-gap: 10px;
 		column-gap: 35px;
 		margin-left: 40px;
 		position: relative;
@@ -169,91 +173,64 @@ body{
 			z-index: 2;
 		}
 
-		&__burger {
-			display: block;
-			position: relative;
-			width: 30px;
-			height: 20px;
-			z-index: 3;
-		}
-
-		&__burger::before,
-		&__burger::after{
-			content: ' ';
-			background-color: rgb(38, 38, 38);
-			width: 100%;
-			height: 2px;
-			position: absolute;
-			left: 0;
-			transition: all 0.3s ease;
-		}
-
-		&__burger span{
-			height: 2px;
-			background-color: rgb(38, 38, 38);
-			position: absolute;
-			left: 0;
-			top: 9px;
-			width: 100%;
-			transition: all 0.3s ease;
-		}
-
-		&__burger::before{
-			top: 0;
-		}
-
-		&__burger::after{
-			bottom: 0;
-		}
-
 		&__menu{
-			position: fixed;
-			top: -100%;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: rgb(0, 196, 196);
-			padding-top: 75px;
-			text-align: center;
-			transition: all 0.3s ease;
-			overflow: auto;
+			position: relative;
+			z-index: 5;
+			display: inline-block;
+			width: 42px;
+			height: 42px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		&__button{
+			display: block;
+			font-size: 17px;
+			font-family: inherit;
+			font-weight: 500;
+			padding: 10px 15px;
+			background-color: #355b82;
+			color: white;
+			margin-right: 20px;
+			box-shadow: 0px 0px 5px 0px black;
 		}
 
 		&__list{
+			position: absolute;
+			display: none;
+			background-color: rgb(0, 196, 196);
+			text-align: center;
+			width: 300px;
+			top: 40px;
+			right: -6px;
+			box-shadow: 0px 0px 5px 0px black;
+		}
+
+		&__menu:hover &__list{
 			display: block;
-			margin: 0;
 		}
 
 		&__link{
-			font-size: 23px;
+			font-size: 17px;
+			display: block;
+			width: fit-content;
+			height: 29px;
+			margin: 0 auto;
 		}
 
 		&__list li{
 			margin-bottom: 30px;
+			height: 30px;
+		}
+
+		&__item{
+			display: flex;
+			align-items: flex-end;
 		}
 
 		&__list li:first-child{
 			margin-top: 30px;
-		}
-
-		//---------------burger-js----------------
-
-		&__burger.active::before{
-			transform: rotate(45deg);
-			top: 9px;
-		}
-
-		&__burger.active::after{
-			transform: rotate(-45deg);
-			bottom: 9px;
-		}
-
-		&__burger.active span{
-			transform: scale(0);
-		}
-
-		&__menu.active{
-			top: 0;
 		}
 	}
 }
@@ -268,7 +245,7 @@ body{
 		min-height: 1000px;
 	}
 
-	@media (max-width:767px){
+	@media (max-width:768px){
 
 		&__main{
 			padding-top: 200px;
